--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Upahar - Thoughtful Gifts for Every Occasion</title>
+    <title>GiftNest - Thoughtful Gifts for Every Occasion</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
@@ -11,8 +11,8 @@
     <!-- Header with Navigation -->
     <header>
         <div class="logo-container">
-            <h1 class="logo">Upahar </h1>
-            <p class="tagline">Delivering Love</p>
+            <h1 class="logo">GiftNest</h1>
+            <p class="tagline">Gifts that speak from the Heart</p>
         </div>
         <nav>
             <ul class="nav-links">
@@ -90,7 +90,7 @@
 
     <!-- Why Choose Us -->
     <section class="why-choose">
-        <h2>Why Choose Upahar</h2>
+        <h2>Why Choose GiftNest</h2>
         <div class="features">
             <div class="feature">
                 <i class="fas fa-gift"></i>
@@ -119,7 +119,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Upahar</h3>
+                <h3>GiftNest</h3>
                 <p>Thoughtful gifts for all occasions delivered with care</p>
             </div>
             <div class="footer-section">
@@ -134,19 +134,19 @@
             <div class="footer-section">
                 <h3>Customer Service</h3>
                 <ul>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">Shipping Policy</a></li>
-                    <li><a href="#">Return Policy</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="customer-care.html">FAQs</a></li>
+                    <li><a href="customer-care.html">Shipping Policy</a></li>
+                    <li><a href="customer-care.html">Return Policy</a></li>
+                    <li><a href="customer-care.html">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Connect With Us</h3>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/i/flow/login"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.pinterest.com/"><i class="fab fa-pinterest"></i></a>
                 </div>
                 <p>Subscribe to our newsletter</p>
                 <form class="newsletter">
@@ -156,7 +156,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Upahar. All rights reserved.</p>
+            <p>&copy; 2023 GiftNest. All rights reserved.</p>
         </div>
     </footer>
 
