--- a/products2.html
+++ b/products2.html
@@ -98,116 +98,116 @@
                 <!-- Product Card 1 -->
                 <div class="product-card">
                     <div class="product-badge">Best Seller</div>
-                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSL1NGL5dRIpbPpkQ7NXXPw6V8ossSkr-IAE5f-Mneeof9ixerqyBuFELDbDtIZuhQAyiN-qwnMjrLtwqxSanlpxsnizkML9NgO5TtQSy4" alt="Rose Bouquet">
+                    <img src="https://www.fnp.com//images/pr/l/v20240930100044/flourishing-foliage_1.jpg" alt="Rose Bouquet">
                     <div class="product-info">
-                        <h3>Premium Rose Bouquet</h3>
+                        <h3>Flourishing Foliage</h3>
                         <div class="product-meta">
-                            <span class="price">₹899</span>
+                            <span class="price">₹4999</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.8</span>
                         </div>
-                        <p class="product-desc">A dozen fresh red roses beautifully arranged</p>
-                        <button class="btn-secondary" onclick="addToCart('prod1', 'Premium Rose Bouquet', 899, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSL1NGL5dRIpbPpkQ7NXXPw6V8ossSkr-IAE5f-Mneeof9ixerqyBuFELDbDtIZuhQAyiN-qwnMjrLtwqxSanlpxsnizkML9NgO5TtQSy4')">Add to Cart</button>
+                        <p class="product-desc">Celebrate growth, greenery, and good vibes with a gift that truly keeps flourishing.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod1', 'Flourishing Foliage', 4999, 'https://www.fnp.com//images/pr/l/v20240930100044/flourishing-foliage_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 2 -->
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/61txQILHPwL._UF1000,1000_QL80_.jpg" alt="Chocolate Box">
+                    <img src="https://www.fnp.com//images/pr/l/v20250626162838/floral-blue-meenakari-rakhi_1.jpg" alt="Chocolate Box">
                     <div class="product-info">
-                        <h3>Luxury Chocolate Box</h3>
+                        <h3>Floral Blue Meenakari Rakhi</h3>
                         <div class="product-meta">
-                            <span class="price">₹649</span>
+                            <span class="price">₹449</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.6</span>
                         </div>
-                        <p class="product-desc">Assorted premium chocolates in elegant packaging</p>
-                        <button class="btn-secondary" onclick="addToCart('prod2', 'Luxury Chocolate Box', 649, 'https://m.media-amazon.com/images/I/61txQILHPwL._UF1000,1000_QL80_.jpg')">Add to Cart</button>
+                        <p class="product-desc">Tie a thread of love that shines with heritage and heart.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod2', 'Floral Blue Meenakari Rakhi', 449, 'https://www.fnp.com//images/pr/l/v20250626162838/floral-blue-meenakari-rakhi_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 3 -->
                 <div class="product-card">
                     <div class="product-badge">New</div>
-                    <img src="https://sublimehouseoftea.com/cdn/shop/files/luxury-gift-box-324184.jpg?v=1730999462" alt="Gift Hamper">
+                    <img src="https://www.fnp.com//images/pr/l/v20240628180031/opulent-kundan-rakhi-n-ferrero-rocher-bliss_1.jpg" alt="Gift Hamper">
                     <div class="product-info">
-                        <h3>Deluxe Gift Hamper</h3>
+                        <h3>Opulent Kundan Rakhi & Ferrero Rocher Bliss</h3>
                         <div class="product-meta">
-                            <span class="price">₹1299</span>
+                            <span class="price">₹749</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.9</span>
                         </div>
-                        <p class="product-desc">Curated collection of chocolates, wine and treats</p>
-                        <button class="btn-secondary" onclick="addToCart('prod3', 'Deluxe Gift Hamper', 1299, 'https://sublimehouseoftea.com/cdn/shop/files/luxury-gift-box-324184.jpg?v=1730999462')">Add to Cart</button>
+                        <p class="product-desc">A perfect fusion of regal tradition and sweet indulgence</p>
+                        <button class="btn-secondary" onclick="addToCart('prod3', 'Opulent Kundan Rakhi & Ferrero Rocher Bliss', 749, 'https://www.fnp.com//images/pr/l/v20240628180031/opulent-kundan-rakhi-n-ferrero-rocher-bliss_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 4 -->
                 <div class="product-card">
-                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRW0gRnMi-_AmBGyeYMUan6otV8Qi85VbOGtWwbNNUA46_fqeoILL4Y7Bf7NVDpYB-M9qI1GsCMIXM0kAQzsYH37NujdRJLrb9aXoA4mA8" alt="Personalized Mug">
+                    <img src="https://www.fnp.com//images/pr/l/v20210916104207/personalised-wooden-key-holder_1.jpg" alt="Personalized Mug">
                     <div class="product-info">
-                        <h3>Personalized Photo Mug</h3>
+                        <h3>Personalised Wooden Key Holder</h3>
                         <div class="product-meta">
                             <span class="price">₹499</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.7</span>
                         </div>
-                        <p class="product-desc">Custom mug with your favorite photo</p>
-                        <button class="btn-secondary" onclick="addToCart('prod4', 'Personalized Photo Mug', 499, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRW0gRnMi-_AmBGyeYMUan6otV8Qi85VbOGtWwbNNUA46_fqeoILL4Y7Bf7NVDpYB-M9qI1GsCMIXM0kAQzsYH37NujdRJLrb9aXoA4mA8')">Add to Cart</button>
+                        <p class="product-desc">A thoughtful blend of utility and personalized décor</p>
+                        <button class="btn-secondary" onclick="addToCart('prod4', 'Personalised Wooden Key Holder', 499, 'https://www.fnp.com//images/pr/l/v20210916104207/personalised-wooden-key-holder_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 5 -->
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/71rAkdZkcJL._SL1500_.jpg" alt="Teddy Bear">
+                    <img src="https://www.fnp.com//images/pr/l/v20240726104625/carlton-london-men-azure-luxe-gift_1.jpg" alt="Teddy Bear">
                     <div class="product-info">
-                        <h3>Soft Teddy Bear</h3>
+                        <h3>Carlton London Men Azure Luxe Gift</h3>
                         <div class="product-meta">
                             <span class="price">₹599</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.5</span>
                         </div>
-                        <p class="product-desc">Cuddly teddy bear with a red ribbon</p>
-                        <button class="btn-secondary" onclick="addToCart('prod5', 'Soft Teddy Bear', 599, 'https://m.media-amazon.com/images/I/71rAkdZkcJL._SL1500_.jpg')">Add to Cart</button>
+                        <p class="product-desc">A curated ensemble that embodies elegance, charm, and masculinity</p>
+                        <button class="btn-secondary" onclick="addToCart('prod5', 'Soft Teddy Bear', 599, 'https://www.fnp.com//images/pr/l/v20240726104625/carlton-london-men-azure-luxe-gift_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 6 -->
                 <div class="product-card">
                     <div class="product-badge">Sale</div>
-                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQOrc5zoAOuRATw3gXxlD4Ob5KdzmuBp-sWcdp0e0dpyoaelnoL_scYvvXu3gGxqgr9T7Z_JM-q-dZ-eF3_eTNPjdjJQwY7UI9Q8MC3l62hHIcxDoy0z8fcgQ" alt="Photo Frame">
+                    <img src="https://www.fnp.com//images/pr/l/v20250108173213/3-ft-huggable-teddy-bear_1.jpg" alt="Photo Frame">
                     <div class="product-info">
-                        <h3>Wooden Photo Frame</h3>
+                        <h3>3 Ft Huggable Teddy Bear</h3>
                         <div class="product-meta">
-                            <span class="price">₹349</span>
-                            <span class="original-price">₹499</span>
+                            <span class="price">₹2099</span>
+                            <span class="original-price">₹2599</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.3</span>
                         </div>
-                        <p class="product-desc">Elegant wooden frame for your memories</p>
-                        <button class="btn-secondary" onclick="addToCart('prod6', 'Wooden Photo Frame', 349, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQOrc5zoAOuRATw3gXxlD4Ob5KdzmuBp-sWcdp0e0dpyoaelnoL_scYvvXu3gGxqgr9T7Z_JM-q-dZ-eF3_eTNPjdjJQwY7UI9Q8MC3l62hHIcxDoy0z8fcgQ')">Add to Cart</button>
+                        <p class="product-desc">Gift love in its fluffiest form — because some hugs should never end.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod6', '3 Ft Huggable Teddy Bear', 2099, 'https://www.fnp.com//images/pr/l/v20250108173213/3-ft-huggable-teddy-bear_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 7 -->
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/71jjz-5smgL._SL1440_.jpg" alt="Scented Candle">
+                    <img src="https://www.fnp.com//images/pr/l/v20240820234919/shree-krishna-wooden-wall-hanging_1.jpg" alt="Scented Candle">
                     <div class="product-info">
-                        <h3>Pack of Aromatherapy Candles</h3>
+                        <h3>Shree Krishna Wooden Wall Hanging</h3>
                         <div class="product-meta">
-                            <span class="price">₹799</span>
+                            <span class="price">₹399</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.8</span>
                         </div>
-                        <p class="product-desc">Set of 3 relaxing scented candles</p>
-                        <button class="btn-secondary" onclick="addToCart('prod7', 'Aromatherapy Candles', 799, 'https://m.media-amazon.com/images/I/71jjz-5smgL._SL1440_.jpg')">Add to Cart</button>
+                        <p class="product-desc">Bring home blessings, beauty, and the melody of Krishna's presence.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod7', 'Shree Krishna Wooden Wall Hanging', 399, 'https://www.fnp.com//images/pr/l/v20240820234919/shree-krishna-wooden-wall-hanging_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 8 -->
                 <div class="product-card">
-                    <img src="https://loveandcheesecake.com/cdn/shop/files/uniquecake1.jpg?v=1721112167&width=480" alt="Birthday Cake">
+                    <img src="https://www.fnp.com//images/pr/l/v20230918223506/personalised-blue-notebook-and-pen-combo_1.jpg" alt="Birthday Cake">
                     <div class="product-info">
-                        <h3>Custom Birthday Cake</h3>
+                        <h3>Personalised Blue Notebook & Pen Combo</h3>
                         <div class="product-meta">
-                            <span class="price">₹999</span>
+                            <span class="price">₹599</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.9</span>
                         </div>
-                        <p class="product-desc">Personalized cake with name and photo</p>
-                        <button class="btn-secondary" onclick="addToCart('prod8', 'Custom Birthday Cake', 999, 'https://loveandcheesecake.com/cdn/shop/files/uniquecake1.jpg?v=1721112167&width=480')">Add to Cart</button>
+                        <p class="product-desc">A smart combo that turns every thought into a statement.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod8', 'Personalised Blue Notebook & Pen Combo', 599, 'https://www.fnp.com//images/pr/l/v20230918223506/personalised-blue-notebook-and-pen-combo_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -215,10 +215,10 @@
 
         <!-- Pagination -->
         <div class="pagination">
-            <a href="products.html" class="active">1</a>
-            <a href="products2.html">2</a>
+            <a href="products.html">1</a>
+            <a href="products2.html" class="active">2</a>
             <a href="products3.html">3</a>
-            <a href="products2.html"><i class="fas fa-chevron-right"></i></a>
+            <a href="products3.html"><i class="fas fa-chevron-right"></i></a>
         </div>
     </section>
 
