--- a/products3.html
+++ b/products3.html
@@ -97,117 +97,114 @@
             <div class="products-grid">
                 <!-- Product Card 1 -->
                 <div class="product-card">
-                    <div class="product-badge">Best Seller</div>
-                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSL1NGL5dRIpbPpkQ7NXXPw6V8ossSkr-IAE5f-Mneeof9ixerqyBuFELDbDtIZuhQAyiN-qwnMjrLtwqxSanlpxsnizkML9NgO5TtQSy4" alt="Rose Bouquet">
+                    <img src="https://www.fnp.com//images/pr/l/v20250130145430/galentines-mug_1.jpg" alt="Rose Bouquet">
                     <div class="product-info">
-                        <h3>Premium Rose Bouquet</h3>
+                        <h3>Galentine's Mug</h3>
                         <div class="product-meta">
-                            <span class="price">₹899</span>
+                            <span class="price">₹349</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.8</span>
                         </div>
-                        <p class="product-desc">A dozen fresh red roses beautifully arranged</p>
-                        <button class="btn-secondary" onclick="addToCart('prod1', 'Premium Rose Bouquet', 899, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcSL1NGL5dRIpbPpkQ7NXXPw6V8ossSkr-IAE5f-Mneeof9ixerqyBuFELDbDtIZuhQAyiN-qwnMjrLtwqxSanlpxsnizkML9NgO5TtQSy4')">Add to Cart</button>
+                        <p class="product-desc">The perfect gift to toast your besties this Galentine’s Day!</p>
+                        <button class="btn-secondary" onclick="addToCart('prod1', 'Galentine Mug', 349, 'https://www.fnp.com//images/pr/l/v20250130145430/galentines-mug_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 2 -->
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/61txQILHPwL._UF1000,1000_QL80_.jpg" alt="Chocolate Box">
+                    <img src="https://www.fnp.com//images/pr/l/v20250305113023/jumboo-personalised-tumbler-yellow_1.jpg" alt="Chocolate Box">
                     <div class="product-info">
-                        <h3>Luxury Chocolate Box</h3>
+                        <h3>Custom name Sipper</h3>
                         <div class="product-meta">
-                            <span class="price">₹649</span>
+                            <span class="price">₹1499</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.6</span>
                         </div>
-                        <p class="product-desc">Assorted premium chocolates in elegant packaging</p>
-                        <button class="btn-secondary" onclick="addToCart('prod2', 'Luxury Chocolate Box', 649, 'https://m.media-amazon.com/images/I/61txQILHPwL._UF1000,1000_QL80_.jpg')">Add to Cart</button>
+                        <p class="product-desc">A gift that’s personal, practical, and perfectly stylish — one sip at a time.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod2', 'Custom name Sipper', 1499, 'https://www.fnp.com//images/pr/l/v20250305113023/jumboo-personalised-tumbler-yellow_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 3 -->
                 <div class="product-card">
                     <div class="product-badge">New</div>
-                    <img src="https://sublimehouseoftea.com/cdn/shop/files/luxury-gift-box-324184.jpg?v=1730999462" alt="Gift Hamper">
+                    <img src="https://www.fnp.com//images/pr/l/v20250208221040/astronaut-projector_1.jpg" alt="Gift Hamper">
                     <div class="product-info">
-                        <h3>Deluxe Gift Hamper</h3>
+                        <h3>Astronaut Projector</h3>
                         <div class="product-meta">
-                            <span class="price">₹1299</span>
+                            <span class="price">₹1149</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.9</span>
                         </div>
-                        <p class="product-desc">Curated collection of chocolates, wine and treats</p>
-                        <button class="btn-secondary" onclick="addToCart('prod3', 'Deluxe Gift Hamper', 1299, 'https://sublimehouseoftea.com/cdn/shop/files/luxury-gift-box-324184.jpg?v=1730999462')">Add to Cart</button>
+                        <p class="product-desc">Gift the stars, wrapped in an astronaut suit.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod3', 'Astronaut Projector', 1149, 'https://www.fnp.com//images/pr/l/v20250208221040/astronaut-projector_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 4 -->
                 <div class="product-card">
-                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRW0gRnMi-_AmBGyeYMUan6otV8Qi85VbOGtWwbNNUA46_fqeoILL4Y7Bf7NVDpYB-M9qI1GsCMIXM0kAQzsYH37NujdRJLrb9aXoA4mA8" alt="Personalized Mug">
+                    <img src="https://www.fnp.com//images/pr/l/v20240701124627/tiny-shutter-camera_4.jpg" alt="Personalized Mug">
                     <div class="product-info">
-                        <h3>Personalized Photo Mug</h3>
+                        <h3>Tiny Shutter Camera</h3>
                         <div class="product-meta">
-                            <span class="price">₹499</span>
+                            <span class="price">₹999</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.7</span>
                         </div>
-                        <p class="product-desc">Custom mug with your favorite photo</p>
-                        <button class="btn-secondary" onclick="addToCart('prod4', 'Personalized Photo Mug', 499, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcRW0gRnMi-_AmBGyeYMUan6otV8Qi85VbOGtWwbNNUA46_fqeoILL4Y7Bf7NVDpYB-M9qI1GsCMIXM0kAQzsYH37NujdRJLrb9aXoA4mA8')">Add to Cart</button>
+                        <p class="product-desc">A pocket-sized delight for photography lovers and memory-makers alike.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod4', 'Tiny Shutter Camera', 999, 'https://www.fnp.com//images/pr/l/v20240701124627/tiny-shutter-camera_4.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 5 -->
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/71rAkdZkcJL._SL1500_.jpg" alt="Teddy Bear">
+                    <img src="https://www.fnp.com//images/pr/l/v20250208221138/dynamic-rotating-water-ripple-night-light_1.jpg" alt="Teddy Bear">
                     <div class="product-info">
-                        <h3>Soft Teddy Bear</h3>
+                        <h3>Dynamic Rotating Water Ripple Night Light</h3>
                         <div class="product-meta">
-                            <span class="price">₹599</span>
+                            <span class="price">₹799</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.5</span>
                         </div>
-                        <p class="product-desc">Cuddly teddy bear with a red ribbon</p>
-                        <button class="btn-secondary" onclick="addToCart('prod5', 'Soft Teddy Bear', 599, 'https://m.media-amazon.com/images/I/71rAkdZkcJL._SL1500_.jpg')">Add to Cart</button>
+                        <p class="product-desc">A mesmerizing lamp that mimics the gentle movement of water, creating a tranquil and dreamy ambiance in any room.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod5', 'Dynamic Rotating Water Ripple Night Light', 799, 'https://www.fnp.com//images/pr/l/v20250208221138/dynamic-rotating-water-ripple-night-light_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 6 -->
                 <div class="product-card">
-                    <div class="product-badge">Sale</div>
-                    <img src="https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQOrc5zoAOuRATw3gXxlD4Ob5KdzmuBp-sWcdp0e0dpyoaelnoL_scYvvXu3gGxqgr9T7Z_JM-q-dZ-eF3_eTNPjdjJQwY7UI9Q8MC3l62hHIcxDoy0z8fcgQ" alt="Photo Frame">
+                    <img src="https://www.fnp.com//images/pr/l/v20250208151541/aventurine-bracelet_1.jpg" alt="Photo Frame">
                     <div class="product-info">
-                        <h3>Wooden Photo Frame</h3>
+                        <h3>Aventurine Bracelet</h3>
                         <div class="product-meta">
-                            <span class="price">₹349</span>
-                            <span class="original-price">₹499</span>
+                            <span class="price">₹2099</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.3</span>
                         </div>
-                        <p class="product-desc">Elegant wooden frame for your memories</p>
-                        <button class="btn-secondary" onclick="addToCart('prod6', 'Wooden Photo Frame', 349, 'https://encrypted-tbn0.gstatic.com/shopping?q=tbn:ANd9GcQOrc5zoAOuRATw3gXxlD4Ob5KdzmuBp-sWcdp0e0dpyoaelnoL_scYvvXu3gGxqgr9T7Z_JM-q-dZ-eF3_eTNPjdjJQwY7UI9Q8MC3l62hHIcxDoy0z8fcgQ')">Add to Cart</button>
+                        <p class="product-desc">A stunning piece crafted from natural green aventurine gemstones known for their soothing energy and heart-healing properties.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod6', 'Aventurine Bracelet', 2099, 'https://www.fnp.com//images/pr/l/v20250208151541/aventurine-bracelet_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 7 -->
                 <div class="product-card">
-                    <img src="https://m.media-amazon.com/images/I/71jjz-5smgL._SL1440_.jpg" alt="Scented Candle">
+                    <img src="https://www.fnp.com//images/pr/l/v20250403162345/anime-aura-picture-frame_1.jpg" alt="Scented Candle">
                     <div class="product-info">
-                        <h3>Pack of Aromatherapy Candles</h3>
+                        <h3>Anime Aura Picture Frame</h3>
                         <div class="product-meta">
-                            <span class="price">₹799</span>
+                            <span class="price">₹499</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.8</span>
                         </div>
-                        <p class="product-desc">Set of 3 relaxing scented candles</p>
-                        <button class="btn-secondary" onclick="addToCart('prod7', 'Aromatherapy Candles', 799, 'https://m.media-amazon.com/images/I/71jjz-5smgL._SL1440_.jpg')">Add to Cart</button>
+                        <p class="product-desc">Frame that brings your photo to life with an electrifying, action-packed anime-inspired aura.</p>
+                        <button class="btn-secondary" onclick="addToCart('prod7', 'Anime Aura Picture Frame', 499, 'https://www.fnp.com//images/pr/l/v20250403162345/anime-aura-picture-frame_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
 
                 <!-- Product Card 8 -->
                 <div class="product-card">
-                    <img src="https://loveandcheesecake.com/cdn/shop/files/uniquecake1.jpg?v=1721112167&width=480" alt="Birthday Cake">
+                    <img src="https://www.fnp.com//images/pr/l/v20200719162503/kabir-singh-unisex-sunglasses_2.jpg" alt="Birthday Cake">
                     <div class="product-info">
-                        <h3>Custom Birthday Cake</h3>
+                        <h3>Kabir Singh Unisex Sunglasses</h3>
                         <div class="product-meta">
-                            <span class="price">₹999</span>
+                            <span class="price">₹599</span>
                             <span class="rating"><i class="fas fa-star"></i> 4.9</span>
                         </div>
-                        <p class="product-desc">Personalized cake with name and photo</p>
-                        <button class="btn-secondary" onclick="addToCart('prod8', 'Custom Birthday Cake', 999, 'https://loveandcheesecake.com/cdn/shop/files/uniquecake1.jpg?v=1721112167&width=480')">Add to Cart</button>
+                        <p class="product-desc">Inspired by the iconic look of the rebellious, unforgettable Kabir Singh</p>
+                        <button class="btn-secondary" onclick="addToCart('prod8', 'Kabir Singh Unisex Sunglasses', 599, 'https://www.fnp.com//images/pr/l/v20200719162503/kabir-singh-unisex-sunglasses_2.jpg')">Add to Cart</button>
                     </div>
                 </div>
             </div>
@@ -215,10 +212,10 @@
 
         <!-- Pagination -->
         <div class="pagination">
-            <a href="products.html" class="active">1</a>
+            <a href="products.html">1</a>
             <a href="products2.html">2</a>
-            <a href="products3.html">3</a>
-            <a href="products2.html"><i class="fas fa-chevron-right"></i></a>
+            <a href="products3.html" class="active">3</a>
+            <a href="products.html"><i class="fas fa-chevron-right"></i></a>
         </div>
     </section>
 
