--- a/about-us.html
+++ b/about-us.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us | Upahar</title>
+    <title>About Us | GiftNest</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -12,7 +12,7 @@
     <!-- Header -->
     <header>
         <div class="logo-container">
-            <h1 class="logo">Upahar</h1>
+            <h1 class="logo">GiftNest</h1>
             <p class="tagline">Gifts that speak from the heart</p>
         </div>
         <nav>
@@ -52,7 +52,7 @@
             <!-- Our Story -->
             <div class="about-section">
                 <h2>Who We Are</h2>
-                <p>Upahar was founded in 2015 with a simple mission: to make gifting meaningful again. In a world of mass-produced presents, we wanted to bring back the thoughtfulness and personal touch that makes gift-giving special.</p>
+                <p>GiftNest was founded in 2015 with a simple mission: to make gifting meaningful again. In a world of mass-produced presents, we wanted to bring back the thoughtfulness and personal touch that makes gift-giving special.</p>
                 <p>What started as a small boutique in Mumbai has grown into a beloved national brand, but our commitment to quality and personal service remains unchanged. We carefully curate each item in our collection, working directly with artisans and suppliers who share our values.</p>
             </div>
 
@@ -86,28 +86,28 @@
             <!-- Our Team -->
             <div class="about-section team">
                 <h2>Meet Our Team</h2>
-                <p>Behind Upahar is a passionate team of gift enthusiasts, designers, and customer service experts dedicated to making your gifting experience exceptional.</p>
+                <p>Behind GiftNest is a passionate team of gift enthusiasts, designers, and customer service experts dedicated to making your gifting experience exceptional.</p>
                 <div class="team-grid">
                     <div class="team-member">
-                        <img src="https://images.unsplash.com/photo-1560250097-0b93528c3117" alt="Priya Sharma">
+                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2" alt="Priya Sharma">
                         <h3>Priya Sharma</h3>
                         <p class="position">Founder & CEO</p>
-                        <p class="bio">With a background in design and a passion for meaningful connections, Priya started Upahar to revolutionize the gifting experience.</p>
+                        <p class="bio">With a background in design and a passion for meaningful connections, Priya started GiftNest to revolutionize the gifting experience.</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://images.unsplash.com/photo-1573496359142-b8d87734a5a2" alt="Rahul Kapoor">
+                        <img src="https://www.indianspeakerbureau.com/img/1714979333_rahul-kapoor.jpeg" alt="Rahul Kapoor">
                         <h3>Rahul Kapoor</h3>
                         <p class="position">Head of Operations</p>
                         <p class="bio">Rahul ensures every gift meets our high standards before it reaches you, managing our supply chain and quality control.</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://images.unsplash.com/photo-1573497019940-1c28c88b4f3e" alt="Ananya Patel">
+                        <img src="https://img.freepik.com/premium-photo/professional-indian-woman-standing-holding-laptop_250865-453.jpg?w=360" alt="Ananya Patel">
                         <h3>Ananya Patel</h3>
                         <p class="position">Creative Director</p>
                         <p class="bio">Ananya's artistic vision shapes our unique collections and custom designs that customers love.</p>
                     </div>
                     <div class="team-member">
-                        <img src="https://images.unsplash.com/photo-1568602471122-7832951cc4c5" alt="Vikram Singh">
+                        <img src="https://img.freepik.com/free-photo/cheerful-indian-businessman-smiling-closeup-portrait-jobs-career-campaign_53876-129417.jpg?semt=ais_hybrid&w=740" alt="Vikram Singh">
                         <h3>Vikram Singh</h3>
                         <p class="position">Customer Experience</p>
                         <p class="bio">Vikram and his team are here to help you find the perfect gift and ensure complete satisfaction.</p>
@@ -149,7 +149,7 @@
                 <div class="testimonial">
                     <div class="quote">
                         <i class="fas fa-quote-left"></i>
-                        <p>I've been using Upahar for all my corporate gifting needs for three years now. The quality and presentation are consistently outstanding, and my clients always comment on how thoughtful the gifts are.</p>
+                        <p>I've been using GiftNest for all my corporate gifting needs for three years now. The quality and presentation are consistently outstanding, and my clients always comment on how thoughtful the gifts are.</p>
                     </div>
                     <div class="author">
                         <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d" alt="Arjun Mehta">
@@ -175,7 +175,7 @@
                 <div class="testimonial">
                     <div class="quote">
                         <i class="fas fa-quote-left"></i>
-                        <p>As someone who struggles with finding unique gifts, Upahar has been a lifesaver. Their recommendations are always spot-on, and their customer service is exceptional.</p>
+                        <p>As someone who struggles with finding unique gifts, GiftNest has been a lifesaver. Their recommendations are always spot-on, and their customer service is exceptional.</p>
                     </div>
                     <div class="author">
                         <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330" alt="Deepika Joshi">
@@ -205,7 +205,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
-                <h3>Upahar</h3>
+                <h3>GiftNest</h3>
                 <p>Thoughtful gifts for all occasions delivered with care</p>
             </div>
             <div class="footer-section">
@@ -220,19 +220,19 @@
             <div class="footer-section">
                 <h3>Customer Service</h3>
                 <ul>
-                    <li><a href="#">FAQs</a></li>
-                    <li><a href="#">Shipping Policy</a></li>
-                    <li><a href="#">Return Policy</a></li>
-                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="customer-care.html">FAQs</a></li>
+                    <li><a href="customer-care.html">Shipping Policy</a></li>
+                    <li><a href="customer-care.html">Return Policy</a></li>
+                    <li><a href="customer-care.html">Privacy Policy</a></li>
                 </ul>
             </div>
             <div class="footer-section">
                 <h3>Connect With Us</h3>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://x.com/i/flow/login"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.pinterest.com/"><i class="fab fa-pinterest"></i></a>
                 </div>
                 <p>Subscribe to our newsletter</p>
                 <form class="newsletter">
@@ -242,7 +242,7 @@
             </div>
         </div>
         <div class="footer-bottom">
-            <p>&copy; 2023 Upahar. All rights reserved.</p>
+            <p>&copy; 2023 GiftNest. All rights reserved.</p>
         </div>
     </footer>
 
