--- a/cart.html
+++ b/cart.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | GiftNest</title>
+    <title>Shopping Cart | GiftNest</title>
     <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/auth.css">
+    <link rel="stylesheet" href="styles/cart.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-    <!-- Header (same as index.html) -->
+    <!-- Header -->
     <header>
         <div class="logo-container">
             <h1 class="logo">GiftNest</h1>
@@ -33,49 +33,38 @@
             </ul>
             <div class="user-actions">
                 <a href="login.html" class="btn-login">Login</a>
-                <a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i></a>
+                <a href="cart.html" class="cart-icon"><i class="fas fa-shopping-cart"></i><span class="cart-count"></span></a>
             </div>
         </nav>
     </header>
 
-    <!-- Login Section -->
-    <section class="auth-container">
-        <div class="auth-form">
-            <h2>Login to Your Account</h2>
-            <form id="loginForm">
-                <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="form-options">
-                    <label class="remember-me">
-                        <input type="checkbox" name="remember"> Remember me
-                    </label>
-                    <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
-                </div>
-                <button type="submit" class="btn-primary">Login</button>
-            </form>
-            <div class="auth-footer">
-                <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
-                <div class="social-login">
-                    <p>Or login with:</p>
-                    <div class="social-icons">
-                        <a href="https://accounts.google.com/v3/signin/identifier?ifkv=AdBytiORcFBowoZMvyBMod4id_Utu1SzAyPfXk1ySixEe_mClE-JdH44d9iz13Aw58kYaWfTyqum8A&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S1999693332%3A1750573815275294" class="social-btn google"><i class="fab fa-google"></i></a>
-                        <a href="https://www.facebook.com/" class="social-btn facebook"><i class="fab fa-facebook-f"></i></a>
-                    </div>
-                </div>
+    <!-- Cart Section -->
+    <section class="cart-section">
+        <div class="cart-container">
+            <h1>Your Shopping Cart</h1>
+            <div id="cart-items" class="cart-items">
+                <!-- Cart items will be loaded here by JavaScript -->
+                <p class="empty-cart-message">Your cart is empty.</p>
             </div>
-        </div>
-        <div class="auth-image">
-            <img src="https://www.satyamkraft.in/cdn/shop/files/gollllllllden_700x700.jpg?v=1745213468" alt="Gift Box">
+            <div class="cart-summary">
+                <div class="summary-row">
+                    <span>Subtotal:</span>
+                    <span id="subtotal">₹0.00</span>
+                </div>
+                <div class="summary-row">
+                    <span>GST (18%):</span>
+                    <span id="gst">₹0.00</span>
+                </div>
+                <div class="summary-row total-row">
+                    <span>Total:</span>
+                    <span id="total">₹0.00</span>
+                </div>
+                <button class="btn-primary order-button" id="place-order-btn">Place Order</button>
+            </div>
         </div>
     </section>
 
-    <!-- Footer (same as index.html) -->
+    <!-- Footer -->
     <footer>
         <div class="footer-content">
             <div class="footer-section">
@@ -88,7 +77,7 @@
                     <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
                     <li><a href="about-us.html">About Us</a></li>
-                    <li><a href="customer-care.html">Contact Us</a></li>
+                    <li><a href="customer-care.html">Contact</a></li>
                 </ul>
             </div>
             <div class="footer-section">
@@ -121,6 +110,6 @@
     </footer>
 
     <script src="js/main.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="js/cart.js"></script>
 </body>
 </html>
