--- a/forgot-password.html
+++ b/forgot-password.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login | GiftNest</title>
+    <title>Forgot Password | GiftNest</title>
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/auth.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -37,41 +37,25 @@
             </div>
         </nav>
     </header>
-
-    <!-- Login Section -->
+    
     <section class="auth-container">
         <div class="auth-form">
-            <h2>Login to Your Account</h2>
-            <form id="loginForm">
+            <h2>Reset Password</h2>
+            <p>Enter your email address and we'll send you a link to reset your password.</p>
+            <form id="forgotPasswordForm">
                 <div class="form-group">
-                    <label for="email">Email Address</label>
-                    <input type="email" id="email" name="email" required>
+                    <br>
+                    <label for="forgot-email">Email Address</label>
+                    <input type="email" id="forgot-email" name="forgot-email" required>
                 </div>
-                <div class="form-group">
-                    <label for="password">Password</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="form-options">
-                    <label class="remember-me">
-                        <input type="checkbox" name="remember"> Remember me
-                    </label>
-                    <a href="forgot-password.html" class="forgot-password">Forgot password?</a>
-                </div>
-                <button type="submit" class="btn-primary">Login</button>
+                <button type="submit" class="btn-primary">Send Reset Link</button>
             </form>
             <div class="auth-footer">
-                <p>Don't have an account? <a href="signup.html">Sign up here</a></p>
-                <div class="social-login">
-                    <p>Or login with:</p>
-                    <div class="social-icons">
-                        <a href="https://accounts.google.com/v3/signin/identifier?ifkv=AdBytiORcFBowoZMvyBMod4id_Utu1SzAyPfXk1ySixEe_mClE-JdH44d9iz13Aw58kYaWfTyqum8A&flowName=GlifWebSignIn&flowEntry=ServiceLogin&dsh=S1999693332%3A1750573815275294" class="social-btn google"><i class="fab fa-google"></i></a>
-                        <a href="https://www.facebook.com/" class="social-btn facebook"><i class="fab fa-facebook-f"></i></a>
-                    </div>
-                </div>
+                <p>Remembered your password? <a href="login.html">Back to login</a></p>
             </div>
         </div>
         <div class="auth-image">
-            <img src="https://www.satyamkraft.in/cdn/shop/files/gollllllllden_700x700.jpg?v=1745213468" alt="Gift Box">
+            <img src="https://static.vecteezy.com/system/resources/previews/027/957/007/non_2x/forgot-password-and-username-concept-businessman-confused-forgot-password-illustration-account-protection-danger-warning-wrong-password-flat-illustration-on-a-white-background-free-vector.jpg" alt="Forgot Password Gift Box">
         </div>
     </section>
 
@@ -119,7 +103,7 @@
             <p>&copy; 2023 GiftNest. All rights reserved.</p>
         </div>
     </footer>
-
+    
     <script src="js/main.js"></script>
     <script src="js/auth.js"></script>
 </body>
