--- a/products.html
+++ b/products.html
@@ -58,41 +58,6 @@
             </div>
         </div>
 
-        <div class="products-container">
-            <!-- Filters Sidebar -->
-            <aside class="filters-sidebar">
-                <div class="filter-group">
-                    <h3>Categories</h3>
-                    <ul class="category-list">
-                        <li><a href="categories/flowers.html">Flowers</a></li>
-                        <li><a href="categories/chocolates.html">Chocolates</a></li>
-                        <li><a href="categories/gifts.html">Gift Hampers</a></li>
-                        <li><a href="categories/personalized.html">Personalized Gifts</a></li>
-                    </ul>
-                </div>
-                <div class="filter-group">
-                    <h3>Price Range</h3>
-                    <div class="price-range">
-                        <input type="range" min="0" max="5000" value="5000" class="slider" id="priceRange">
-                        <div class="price-values">
-                            <span>₹0</span>
-                            <span>₹5000</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="filter-group">
-                    <h3>Occasions</h3>
-                    <div class="checkbox-group">
-                        <label><input type="checkbox" name="occasion" value="birthday"> Birthday</label>
-                        <label><input type="checkbox" name="occasion" value="anniversary"> Anniversary</label>
-                        <label><input type="checkbox" name="occasion" value="valentine"> Valentine's Day</label>
-                        <label><input type="checkbox" name="occasion" value="wedding"> Wedding</label>
-                        <label><input type="checkbox" name="occasion" value="thankyou"> Thank You</label>
-                    </div>
-                </div>
-                <button class="btn-primary apply-filters">Apply Filters</button>
-            </aside>
-
             <!-- Products Grid -->
             <div class="products-grid">
                 <!-- Product Card 1 -->
@@ -208,6 +173,36 @@
                         </div>
                         <p class="product-desc">Personalized cake with name and photo</p>
                         <button class="btn-secondary" onclick="addToCart('prod8', 'Custom Birthday Cake', 999, 'https://loveandcheesecake.com/cdn/shop/files/uniquecake1.jpg?v=1721112167&width=480')">Add to Cart</button>
+                    </div>
+                </div>
+
+                <!-- Chocolate Product 7 -->
+                <div class="product-card">
+                    <img src="https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcTXOud5IYaxfRIri1hQvfsnBO9DtXZT-23ui75_l0-TBlmiGXQuvn0IPxlTkWWr4dcd1FunEKwoZgLJW8CrR7HAip6iu2ZNsBiNpZXu3pa7LXTw1ToSWtMUMw" alt="Gourmet Chocolate Bars">
+                    <div class="product-info">
+                        <h3>Ferrero Rocher</h3>
+                        <div class="product-meta">
+                            <span class="price">₹600</span>
+                            <span class="rating"><i class="fas fa-star"></i> 4.4</span>
+                        </div>
+                        <p class="product-desc">Box of World famous Ferrero Rocher</p>
+                        <button class="btn-secondary" onclick="addToCart('choco7', 'Ferrero Rocher', 600, 'https://encrypted-tbn1.gstatic.com/shopping?q=tbn:ANd9GcTXOud5IYaxfRIri1hQvfsnBO9DtXZT-23ui75_l0-TBlmiGXQuvn0IPxlTkWWr4dcd1FunEKwoZgLJW8CrR7HAip6iu2ZNsBiNpZXu3pa7LXTw1ToSWtMUMw')">Add to Cart</button>
+                    </div>
+                </div>
+
+                <!-- Chocolate Product 5 -->
+                <div class="product-card">
+                    <div class="product-badge">Sale</div>
+                    <img src="https://www.fnp.com//images/pr/l/v20240911124119/timeless-glow-led-lamp_1.jpg" alt="Chocolate Dipped Fruits">
+                    <div class="product-info">
+                        <h3>Personalized Timeless Glow LED Lamp</h3>
+                        <div class="product-meta">
+                            <span class="price">₹749</span>
+                            <span class="original-price">₹899</span>
+                            <span class="rating"><i class="fas fa-star"></i> 4.5</span>
+                        </div>
+                        <p class="product-desc">Turn memories into light – a glowing keepsake that illuminates your favorite photo with an eternal shine</p>
+                        <button class="btn-secondary" onclick="addToCart('choco5', 'Personalized Timeless Glow LED Lamp', 749, 'https://www.fnp.com//images/pr/l/v20240911124119/timeless-glow-led-lamp_1.jpg')">Add to Cart</button>
                     </div>
                 </div>
             </div>
