--- a/products3.html
+++ b/products3.html
@@ -58,41 +58,6 @@
             </div>
         </div>
 
-        <div class="products-container">
-            <!-- Filters Sidebar -->
-            <aside class="filters-sidebar">
-                <div class="filter-group">
-                    <h3>Categories</h3>
-                    <ul class="category-list">
-                        <li><a href="categories/flowers.html">Flowers</a></li>
-                        <li><a href="categories/chocolates.html">Chocolates</a></li>
-                        <li><a href="categories/gifts.html">Gift Hampers</a></li>
-                        <li><a href="categories/personalized.html">Personalized Gifts</a></li>
-                    </ul>
-                </div>
-                <div class="filter-group">
-                    <h3>Price Range</h3>
-                    <div class="price-range">
-                        <input type="range" min="0" max="5000" value="5000" class="slider" id="priceRange">
-                        <div class="price-values">
-                            <span>₹0</span>
-                            <span>₹5000</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="filter-group">
-                    <h3>Occasions</h3>
-                    <div class="checkbox-group">
-                        <label><input type="checkbox" name="occasion" value="birthday"> Birthday</label>
-                        <label><input type="checkbox" name="occasion" value="anniversary"> Anniversary</label>
-                        <label><input type="checkbox" name="occasion" value="valentine"> Valentine's Day</label>
-                        <label><input type="checkbox" name="occasion" value="wedding"> Wedding</label>
-                        <label><input type="checkbox" name="occasion" value="thankyou"> Thank You</label>
-                    </div>
-                </div>
-                <button class="btn-primary apply-filters">Apply Filters</button>
-            </aside>
-
             <!-- Products Grid -->
             <div class="products-grid">
                 <!-- Product Card 1 -->
@@ -205,6 +170,34 @@
                         </div>
                         <p class="product-desc">Inspired by the iconic look of the rebellious, unforgettable Kabir Singh</p>
                         <button class="btn-secondary" onclick="addToCart('prod8', 'Kabir Singh Unisex Sunglasses', 599, 'https://www.fnp.com//images/pr/l/v20200719162503/kabir-singh-unisex-sunglasses_2.jpg')">Add to Cart</button>
+                    </div>
+                </div>
+
+                <!-- Gift Hamper 6 - FNP Style -->
+                <div class="product-card">
+                    <img src="https://www.fnp.com//images/pr/l/v20240416123843/blossom-brews-tea-gift-box_1.jpg" alt="Tea & Coffee Connoisseur">
+                    <div class="product-info">
+                        <h3>Tea & Coffee Connoisseur</h3>
+                        <div class="product-meta">
+                            <span class="price">₹1399</span>
+                            <span class="rating"><i class="fas fa-star"></i> 4.5</span>
+                        </div>
+                        <p class="product-desc">Premium tea blends, artisanal coffee, and biscotti</p>
+                        <button class="btn-secondary" onclick="addToCart('hamper6', 'Tea & Coffee Connoisseur', 1399, 'https://www.fnp.com//images/pr/l/v20240416123843/blossom-brews-tea-gift-box_1.jpg')">Add to Cart</button>
+                    </div>
+                </div>
+
+                <!-- Chocolate Product 2 -->
+                <div class="product-card">
+                    <img src="https://www.fnp.com//images/pr/l/v20250626162839/imperial-american-diamond-rakhi_2.jpg" alt="Dark Chocolate Collection">
+                    <div class="product-info">
+                        <h3>Imperial American Diamond Rakhi</h3>
+                        <div class="product-meta">
+                            <span class="price">₹519</span>
+                            <span class="rating"><i class="fas fa-star"></i> 4.7</span>
+                        </div>
+                        <p class="product-desc">Selection of 70% cocoa dark chocolates</p>
+                        <button class="btn-secondary" onclick="addToCart('choco2', 'Imperial American Diamond Rakhi', 519, 'https://www.fnp.com//images/pr/l/v20250626162839/imperial-american-diamond-rakhi_2.jpg')">Add to Cart</button>
                     </div>
                 </div>
             </div>
